fix(css): made author name more visible in chat

--- a/client/src/app/components/chatroom/chatroom.component.scss
+++ b/client/src/app/components/chatroom/chatroom.component.scss
@@ -40,6 +40,11 @@ li {
     margin: 10px 0;
 }
 
+.author {
+    font-weight: 900;
+    color: white;
+}
+
 .timestamp {
     font-size: 0.8em;
     color: grey;
